  * [Roland] Fixed create-mailing-lists.pl to change the base URL of newly
    created mailing-lists (Gforge bug #331).  Also added a
    fix-mailing-lists.pl script to fix the previous damage.  We even run
    this script if the previously installed version was likely to have the
    bug.
  * [Roland] and [Christian] Added cn: fiend in LDAP entries for
    mailing-lists.

 -- Roland Mas <lolando@debian.org>  Wed, 18 Jun 2003 23:20:41 +0200

gforge (3rc2-3) unstable; urgency=low

  * [Roland] Switched from non-US to main, so that the upload be accepted.

 -- Roland Mas <lolando@debian.org>  Wed, 21 May 2003 00:11:57 +0200

gforge (3rc2-2) unstable; urgency=low

  * [Roland] Added db/20030513.sql, to add an "enabled" column to the
    themes table.  Fixed register-theme accordingly, and wrote a new
    unregister-theme too (which just disables the theme).
  * [Christian] Updated French.tab contributed by Linac (Angouleme Lug)
    for Adullact <michel.bondaz@linac.org>.
  * [Roland] Applied patch #330 fixing LDAP schema.  Thanks, Alwyn
    Schoeman <alwyn@smart.com.ph>.
  * [Christian] Moved <name> theme in gforge-theme-<name> dir where name
    not gforge or osx.
  * [Roland] Fixed cvs_dump_update.pl so that it creates the homedirs for
    the anoncvs_* users when needed.
  * [Roland] Also fixed database user creation code.
  * [Roland] Depend on cronolog (>= 1.6.2-1), since the binary was
    relocated from /usr/sbin to /usr/bin in that version.
  * [Roland] Clean the source tree so as to be able to build a non-native
    Debian package.
  * [Roland] Restored initial debSfMailingList (Mailman 2.0 version) to
    the LDAP schema, and added the new debSfMailingListMM21 with OID
    1.3.6.1.4.1.9586.1.1.1.2.3 for Mailman 2.1.  Fixed sql2ldif.pl
    accordingly.

 -- Roland Mas <lolando@debian.org>  Tue, 20 May 2003 23:18:47 +0200

gforge (3rc2-1) unstable; urgency=low

  * [Christian] rc2 will go to unstable
